Changes in Version 1.3.4
  o The label.cex argument now defaults to 1 if label.scale = FALSE
  o The label.scale.equal argument now can be set to TRUE to make all labels scale equally to the largest cex such that the longest label fits.
     o Defaults to TRUE!

Changes in Version 1.3.3
  o The 'lambda.min.ratio' of 'EBICglasso' now defaults to 0.01 instead of 0.1, similar to earlier versions of qgraph. This will cause EBICglasso and qgraph(..., graph = "glasso") to potentially return less sparse models!
  o Added 'countDiagonal' argument to qgraph, EBICglasso and EBIC, so that behavior of older versions of qgraph can be mimicked.
  o Fixed a bug when computing average weights matrix with network that only has negative edges
  o Added 'means', 'SDs' and 'meanRange' arguments to qgraph(). These can be used to plot bars inside nodes indicating the means and variances of the nodes.
  o Added two new options for the 'legend.mode' argument in qgraph(): "style1" (default) and "style2", which use information from both the 'groups' and the 'nodeNames' arguments to plot the legend.
  

Changes in Version 1.3.2
  o Solved an issue with bg = TRUE resulting in small white borders around background pixels
  o centralityTable and clusteringTable now appropriately call melt from the reshape2 namespace
  o cor_auto now suppresses warnings
  o Added 'background' argument to qgraph()
  o qgraphGUI now links to shiny app
  o centrality() can now use igraph for faster computations
  o qgraphAnnotate now works on Windows
  o Added the makeBW function to plot a network that can be understood also in black and white or grayscale. Thanks to Giulio Costantini!

Changes in Version 1.3.1
  o 'sendplot' package moved from imports to suggests list.
  o Added the function 'qgraphMixed' which is designed to plot graphs that contain both undirected and directed edges.
  o Added the 'repulsion' argument to averageLayout
  o Added the 'verbose' argument to cor_auto