@@ -1,6 +1,7 @@
 Changes in Version 1.3.4
   o The label.cex argument now defaults to 1 if label.scale = FALSE
   o The label.scale.equal argument now can be set to TRUE to make all labels scale equally to the largest cex such that the longest label fits.
+     o Can alternatively be a factor or numeric vector indicating which groups of nodes whould have the same label shape
      o Defaults to TRUE!
 
 Changes in Version 1.3.3
